--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>assignment-12</title>
+        <title>Ebay Retail & Dropshipping</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
